--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,12 @@
-.App {
-  text-align: center;
+html,
+body {
+  background-color: gray;
 }
-
 .container {
   margin: 80px auto 0 auto;
   max-width: 1000px;
+}
+
+a{
+  text-decoration: none;
 }
