--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,16 @@
 html,
 body {
-  background-color: gray;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  /* background-color: gray; */
 }
+
 .container {
   margin: 80px auto 0 auto;
   max-width: 1000px;
 }
 
-a{
+a {
   text-decoration: none;
 }
